--- a/Crooz/Resources/layout/Main.axml
+++ b/Crooz/Resources/layout/Main.axml
@@ -3,21 +3,33 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <ImageView
-    android:src="@android:drawable/ic_menu_gallery"
-    android:layout_width="fill_parent"
+  <FrameLayout
+    android:layout_width="225.0dp"
     android:layout_height="300.0dp"
-    android:id="@+id/imageView1"
-    android:adjustViewBounds="true" />
-    <TextView
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:layout_width="fill_parent"
+    android:layout_gravity="center">
+
+    <TextureView
+    android:id="@+id/textureView1"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/resultText"
-    android:textAlignment="center" />
-    <Button
-    android:id="@+id/GetPictureButton"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Take Picture" />
+   />
+    
+  </FrameLayout>
+  <ImageView
+      android:src="@android:drawable/ic_menu_gallery"
+      android:layout_width="fill_parent"
+      android:layout_height="300.0dp"
+      android:id="@+id/imageView1"
+      android:adjustViewBounds="true" />
+  <TextView
+      android:textAppearance="?android:attr/textAppearanceLarge"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/resultText"
+      android:textAlignment="center" />
+  <Button
+      android:id="@+id/GetPictureButton"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="Take Picture" />
 </LinearLayout>
