--- a/Crooz/Resources/layout/Main.axml
+++ b/Crooz/Resources/layout/Main.axml
@@ -3,39 +3,37 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-  <FrameLayout
-    android:layout_width="225.0dp"
-    android:layout_height="300.0dp"
-    android:layout_gravity="center">
-    <TextureView
-    android:id="@+id/textureView1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-   />
-    
-  </FrameLayout>
-  <ImageView
-      android:src="@android:drawable/ic_menu_gallery"
-      android:layout_width="fill_parent"
-      android:layout_height="200.0dp"
-      android:id="@+id/imageView1"
-      android:adjustViewBounds="true" />
-  <TextView
+    <FrameLayout
+        android:layout_width="285.0dp"
+        android:layout_height="500.0dp"
+        android:layout_gravity="center">
+        <TextureView
+            android:id="@+id/textureView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
+    <!--<ImageView
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="fill_parent"
+        android:layout_height="200.0dp"
+        android:id="@+id/imageView1"
+        android:adjustViewBounds="true" />-->
+    <TextView
         android:layout_width="fill_parent"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_height="wrap_content"
         android:text="Location (when available)"
         android:id="@+id/location_text"
         android:layout_marginBottom="15dp" />
-  <TextView
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/resultText"
-      android:textAlignment="center" />
-  <Button
-      android:id="@+id/GetPictureButton"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:text="Take Picture" />
+    <TextView
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/resultText"
+        android:textAlignment="center" />
+    <!--<Button
+        android:id="@+id/GetPictureButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Take Picture" />-->
 </LinearLayout>
